--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -59,20 +59,22 @@ library(mosaicData)
 
 #Tree reg
 et1<-lm(coll_HS~TreeCanopyCover, data=all_data)
-et2<-lm(coll_HS~TreeCanopyCover +Income, data=all_data)
-stargazer::stargazer(et1, et2, type="text",
- dep.var.labels=c("Ratio of People with Higher Education to Lower Education"),
- covariate.labels=c("Tree Canopy Cover","Median Income"), out="tree_edu.txt")
+et2<-lm(coll_HS~TreeCanopyCover + UrbanRank, data=all_data)
+et3<-lm(coll_HS~TreeCanopyCover + UrbanRank +Income, data=all_data)
+stargazer::stargazer(et1, et2, et3, type="text",
+ dep.var.labels=c("Percent of Adults with Bachelor's Deegree"),
+ covariate.labels=c("Tree Canopy Cover","Urban Rank", "Median Income"), out="tree_edu.txt")
 
 #pollution regressions
 
 
 ep1<-lm(coll_HS~Pollution, data=all_data) 
-ep2<-lm(coll_HS~Pollution+Income, data=all_data) 
+ep2<-lm(coll_HS~Pollution + UrbanRank, data=all_data)
+ep3<-lm(coll_HS~Pollution + UrbanRank + Income, data=all_data) 
 
 stargazer::stargazer(ep1, ep2, type="text",
- dep.var.labels=c("Ratio of People with Higher Education to Lower Education"),
- covariate.labels=c("Particulate Matter","Median Income"), out="polution_edu.txt")
+ dep.var.labels=c("Percent of Adults with Bachelor's Deegree"),
+ covariate.labels=c("Particulate Matter","Urban Rank", "Median Income"), out="polution_edu.txt")
 ```
 
 ## Boxplots for air pollution, arsenic, and tree cover (Kana)
