--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -106,6 +106,19 @@ bach_vs_tree_lm <- all_data %>%
 
 bach_vs_tree_lm 
 
+bach_vs_green_lm <- all_data %>% 
+  na.omit() %>%
+  filter(AvailGreenSpace < 10^6) %>%
+  ggplot(aes(AvailGreenSpace, Bachelors)) +
+  geom_point(aes(color = UrbanRank), alpha = 0.3, size = 2) +
+  scale_color_manual(values = c("#6baed6","#4292c6","#2171b5")) +
+  geom_smooth(method = "lm") +
+  facet_grid(. ~ UrbanRank) +
+  labs(x="AvailGreenSpace", y="% Adults with Bachelor's Degrees") +
+  theme_bw() 
+
+bach_vs_green_lm 
+
 bach_vs_pollution_lm_income <- all_data %>%
   na.omit() %>%
   ggplot(aes(Pollution, Bachelors)) +
