--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -40,11 +40,10 @@ includeSourceDocuments()
 Downloading the USACountyEduAttainment data
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```{r}
-#' @Variables of interest: UrbanRank (Anisha is currently  making it) and Bachelors (%) 
-#' @Year 2013 Rural-Urban Continuum Codes, 2011-2015 Education Attainment
-
 #' Scrapes the excel download link for US County Education Attainment
 #' Source: "https://www.ers.usda.gov/data-products/county-level-data-sets/county-level-data-sets-download-data.aspx" and click Educational attainment for the U.S., States, and counties, 1970-2015
+#' @Variables of interest: Rural-Urban Continuum code and Bachelors (%) 
+#' @Year 2013 Rural-Urban Continuum Codes, 2011-2015 Education Attainment
 #'
 #' @return The edu_data that contains the FIPSCode, UrbanCode (2013 Rural-Urban Continuum Code), LessThanHS (%), HSDiploma (%), Bachelors (%), UrbanRank. 
 
@@ -60,26 +59,6 @@ GetEduData <- function(){
 
   #Get rid of the temporary file tmp
   unlink(tmp)
-  
-  #------------------
-  # Local Download (USDA down)
-  # ----------------
-  # ----------------
-  # if(userName == "K"){
-  #   path <- "C:\\Users\\kanay\\Documents\\R\\stat133\\AllStates\\"
-  # }else if(userName == "V"){
-  #   path <- "~/Downloads/stats133data"
-  # }else if(userName == "A") {
-  #   path <- "/Users/anishakumar/Documents/Stats133/RStudioFiles/Stats133Project/edu.xls"
-  # }else if(userName == "KS"){
-  #   path <- "C:\\Users\\kagex\\Downloads\\edu.xls"
-  # }else{
-  #   path <- "C:\\Users\\Katrlyn\\Downloads\\edu.xls"
-  # }
-  
-  
-  #edu_data_unclean <- read_excel(tmp, sheet = 1, skip = 4)
-  
   
   #Wrangle and select variables
   
@@ -183,53 +162,26 @@ Downloading the USACountyIncomeEmploy data
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ```{r}
-#' @Variables of interest: Income and IncomeQuartile
-#' @Year 2015
-
 #' Scrapes the excel download link for US Income
 #' Source: https://www.ers.usda.gov/data-products/county-level-data-sets/county-level-data-sets-download-data.aspx and click Unemployment and median household income for the U.S., States, and counties, 2007-15
+#' @Variables of interest: Income and IncomeQuartile
+#' @Year 2015
 #'
 #' @return The income dataframe that contains FIPSCode, Income, Unemployment and IncomeQuartile 
 
 GetIncomeData <- function(){
-  # 
-  # #download the data from the URL
   url <- "https://www.ers.usda.gov/webdocs/DataFiles/48747/Unemployment.xls?v=42762"
-  #temporarily store the file
   tmp <- tempfile(fileext=".xls")
   download.file(url, destfile=tmp, mode="wb")
 
   income_unclean <- read_excel(tmp, sheet = 1, skip = 7)
-
-  #remove the temporary file
   unlink(tmp)
-  
-  #------------------
-  # Local Download (USDA down)
-  # ----------------
-  # if(userName == "K"){
-  #   path <- "C:\\Users\\kanay\\Documents\\R\\stat133\\AllStates\\"
-  # }else if(userName == "V"){
-  #   path <- "~/Downloads/stats133data"
-  # }else if(userName == "A") {
-  #   path <- "/Users/anishakumar/Documents/Stats133/RStudioFiles/Stats133Project/income.xls"
-  # }else if(userName == "KS"){
-  #   path <- "C:\\Users\\kagex\\Downloads\\income.xls"
-  # }else{
-  #   path <- "C:\\Users\\Katrlyn\\Downloads\\income.xls"
-  # }
-  
-  #
-  #
-  #income_unclean <- read_excel(tmp, sheet = 1, skip = 7)
   
   #remove any non-alphanumeric characters
   income <- income_unclean %>% 
     mutate(Area_name= gsub(", ..$", "", Area_name), Area_name)%>% #remove any non-alphanumeric characters
-    subset(select=c("FIPStxt","Median_Household_Income_2015","Unemployment_rate_2015"))%>% #select for desired variables
-    dplyr::rename(FIPSCode=FIPStxt) #Rename FIPStxt so that it is FIPSCode
-  
-  #Rename the column names 
+    subset(select=c("FIPStxt","Median_Household_Income_2015","Unemployment_rate_2015"))%>% 
+    dplyr::rename(FIPSCode=FIPStxt)
   colnames(income) <- c("FIPSCode", "Income", "Unemployment")
   
   #Make a column called IncomeQuartile that separates incomes into 4 quartiles
@@ -241,8 +193,7 @@ GetIncomeData <- function(){
   income$IncomeQuartile[income$IncomeQuartile == 3] <- "$47k - 54k"
   income$IncomeQuartile[income$IncomeQuartile == 4] <- "> $54k"
   income$IncomeQuartile <- base::as.factor(income$IncomeQuartile)
-  #income$IncomeQuartile = factor(income$IncomeQuartile, levels(income$IncomeQuartile) [c(3,1,2,4)]) #FOR PC
-  income$IncomeQuartile <- factor(income$IncomeQuartile, levels = c("< $40k","$40k - 47k","$47k - 54k","> $54k")) #FOR MAC 
+  income$IncomeQuartile <- factor(income$IncomeQuartile, levels = c("< $40k","$40k - 47k","$47k - 54k","> $54k")) 
   return(income)
 }
 
@@ -460,7 +411,6 @@ Download Tree Data  (Method 1: Download all the files locally)
 #' Scrapes the download link for each state's forestry data and then extracts forestry data for each county.
 #' Source: https://www.nrs.fs.fed.us/data/urban/
 #' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
-#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
 #'
 #' @return A data frame containing county name, FIPS code, tree canopy per person, available green space, and 
 #' tree canopy cover in developped areas.
@@ -525,7 +475,6 @@ Download Tree Data (Method 2: Download via temporary files)
 #' Scrapes the download link for each state's forestry data and then extracts forestry data for each county.
 #' Source: https://www.nrs.fs.fed.us/data/urban/
 #' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
-#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
 #'
 #' @return A data frame containing county name, FIPS code, tree canopy per person, available green space, and 
 #' tree canopy cover in developped areas.
@@ -581,6 +530,11 @@ GetTreeDataTEMP <- function(){
 
 
 ```{r}
+#' Categorizes the counties by their geopgraphic region in the U.S., based on state.
+#'
+#' @param all_data Aggregate dataset
+#'
+#' @return revised aggregate data frame with county geographic region indicated
 #Pacific 53, 16, 32, 06, 41 
 #SouthWest  35, 04, 49, 40 
 #West 30, 38, 46, 49, 56, 08, 31, 20
@@ -588,7 +542,6 @@ GetTreeDataTEMP <- function(){
 #MidWest 19, 29, 26, 27, 17, 18, 55, 39
 #NorthEast 51, 54, 24, 44, 42, 36, 23, 33, 50, 25, 09, 34, 10, 11
 
-#West 53, 16, 32, 06, 41 
 GetStateRegion4 <- function(all_data){
   all_data$Region <- ""
   for (i in 1:nrow(all_data)){
@@ -636,6 +589,9 @@ Main Code: Acquire and Join all data
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ```{r}
+#' Main code to aquire and join all data into the aggregate dataset including data for education, income, pollution, and forestry
+#' Source: https://www.nrs.fs.fed.us/data/urban/
+#'
 
 #-------USER--------
 # READ BELOW BEFORE RUNNING
