--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -59,8 +59,8 @@ library(mosaicData)
 
 #Tree reg
 et1<-lm(Bachelors~TreeCanopyCover, data=all_data)
-et2<-lm(Bachelors~TreeCanopyCover + UrbanRank, data=all_data)
-et3<-lm(Bachelors~TreeCanopyCover + UrbanRank +Income, data=all_data)
+et2<-lm(Bachelors~TreeCanopyCover + UrbanCode, data=all_data)
+et3<-lm(Bachelors~TreeCanopyCover + UrbanCode + Income, data=all_data)
 stargazer::stargazer(et1, et2, et3, type="text",
  dep.var.labels=c("Percent of Adults with Bachelor's Deegree"),
  covariate.labels=c("Tree Canopy Cover","Urban Rank", "Median Income"), out="tree_edu.txt")
@@ -69,8 +69,8 @@ stargazer::stargazer(et1, et2, et3, type="text",
 
 
 ep1<-lm(Bachelors~Pollution, data=all_data) 
-ep2<-lm(Bachelors~Pollution + UrbanRank, data=all_data)
-ep3<-lm(Bachelors~Pollution + UrbanRank + Income, data=all_data) 
+ep2<-lm(Bachelors~Pollution + UrbanCode, data=all_data)
+ep3<-lm(Bachelors~Pollution + UrbanCode + Income, data=all_data) 
 
 stargazer::stargazer(ep1, ep2, type="text",
  dep.var.labels=c("Percent of Adults with Bachelor's Deegree"),
