--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -76,7 +76,8 @@ GetEduData <- function(){
   
   edu_data$UrbanRank <- ""
   
-  #The for loop classifies the UrbanCode (Rural-Urban Continuum Code). 1-3 is metropolitan, 4-7 is urban and 8 - 11 is rural. s
+  #The for loop classifies the UrbanCode (Rural-Urban Continuum Code). 
+  #Code 1-3 is metropolitan, 4-7 is urban and 8 - 11 is rural.
   for (i in 1:nrow(edu_data)){
      if (is.na(edu_data$UrbanCode[i])){
        edu_data$UrbanRank[i] <- NA
@@ -163,7 +164,7 @@ Downloading the USACountyIncomeEmploy data
 
 ```{r}
 #' Scrapes the excel download link for US Income
-#' Source: https://www.ers.usda.gov/data-products/county-level-data-sets/county-level-data-sets-download-data.aspx and click Unemployment and median household income for the U.S., States, and counties, 2007-15
+#' Source: https://www.ers.usda.gov/data-products/county-level-data-sets/county-level-data-sets-download-data.aspx #' (Unemployment and median household income for the U.S., States, and counties, 2007-15)
 #' @Variables of interest: Income and IncomeQuartile
 #' @Year 2015
 #'
@@ -273,8 +274,7 @@ Support functions for Downloading and loading state Excel files
 #' @return A data frame containing variables: State, CountyName, and FIPS (FIPS code)
 
 FIPS_fun <- function(state = NA){
-  #Note: colClasses = "character" helps keep the leading 0s
-  #http://stackoverflow.com/questions/17414776/read-csv-warning-eof-within-quoted-string-prevents-complete-reading-of-file
+
   df <- read.table("https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt", sep = ",", col.names = c("State", "StateFIPS", "CountyFIPS", "CountyName", "ClassFIPSCode" ), colClasses = "character", quote = "")
   #Shannon County (46-113) change to Oglala Lakota County (46-102) (Effective 2015)
   df2 <- data.frame(State = "SD", StateFIPS = "46", CountyFIPS = "102", CountyName = "Oglala Lakota County", ClassFIPSCode = "H1")
@@ -294,8 +294,6 @@ FIPS_fun <- function(state = NA){
 ```{r}
 #' Extracts data from an excel file relating to the forestry variables of interest.
 #' @Variables: Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
-#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
-
 #' @param file Location of the state .xls file
 #' @param stateAbbrev the state postal code for the count of interest
 #' @return A data frame containing variables: State, CountyName, FIPS (FIPS code), TreeCanopy, AvailGreenSpace, and TreeCanopyCover
@@ -416,14 +414,11 @@ Download Tree Data  (Method 1: Download all the files locally)
 #' tree canopy cover in developped areas.
 
 GetTreeData <- function(userName){
-  #Webscrape the data links from the USDA Forest Service
-  #The original data source is: https://www.nrs.fs.fed.us/data/urban/ 
-  
   AllStates <- Webscrape()
   
   #Download all the xls files locally for data processing
   #AllStates <- DownloadLocally(AllStates)
-  AllStates <- LoadFilepaths(AllStates, userName) #You will need to load this every time if you're working from local files
+  AllStates <- LoadFilepaths(AllStates, userName) 
   
   #Extract urban forestry for each state in the United States
   for(i in 1:length(AllStates$downloadLinks)){
@@ -486,7 +481,6 @@ GetTreeDataTEMP <- function(){
   #Download via temp files (no local storage on hard drive )
   
   for(i in 1:length(AllStates$downloadLinks)){
-    #Download xls file
     url <- AllStates$downloadLinks[i]
     tmp <- tempfile(fileext=".xls")
     download.file(url,destfile=tmp, mode="wb")
@@ -513,15 +507,11 @@ GetTreeDataTEMP <- function(){
     }
     unlink(tmp)
   }
-  #Things that need fixing still
-  df <- df_full %>% subset(is.na(FIPS) | is.na(TreeCanopy))
-  df
+
   
-  #-------------------------------------------------------------------------------------------
-  ###### MY CODE  SO THAT I CAN JOIN THE TREE DATA TO MY OTHER DATA FOR THE SCATTERPLOTS######
-  #-------------------------------------------------------------------------------------------
+  #Drop everything except for the variables of interest and FIPS code
   tree_data<-df_full[, -grep("State|Name", colnames(df_full))]
-  #Filter out outlier values?
+  #Filter out outlier values
   tree_data<-tree_data%>%rename(FIPSCode=FIPS)%>%filter(TreeCanopyCover<.55)
   return(tree_data)
 }
@@ -530,28 +520,23 @@ GetTreeDataTEMP <- function(){
 
 
 ```{r}
-#' Categorizes the counties by their geopgraphic region in the U.S., based on state.
+#' Categorizes the counties into four regions (West, Midwest, South, and Northeast) 
+#' by their geopgraphic region in the U.S., based on state FIPS.
 #'
 #' @param all_data Aggregate dataset
 #'
 #' @return revised aggregate data frame with county geographic region indicated
-#Pacific 53, 16, 32, 06, 41 
-#SouthWest  35, 04, 49, 40 
-#West 30, 38, 46, 49, 56, 08, 31, 20
-#SouthEast 05, 22, 01, 47, 28, 12, 37, 45, 21, 13
-#MidWest 19, 29, 26, 27, 17, 18, 55, 39
-#NorthEast 51, 54, 24, 44, 42, 36, 23, 33, 50, 25, 09, 34, 10, 11
 
 GetStateRegion4 <- function(all_data){
   all_data$Region <- ""
   for (i in 1:nrow(all_data)){
-    if (all_data$StateFips[i] %in% c("53", "16", "32", "06", "41", "30", "56", "49", "08", "04", "35")){ #11
+    if (all_data$StateFips[i] %in% c("53", "16", "32", "06", "41", "30", "56", "49", "08", "04", "35")){ 
       all_data$Region[i]<- "West"
-    } else if (all_data$StateFips[i] %in% c("38", "46", "31", "20", "29", "19", "27", "55", "17", "18", "39", "26")){ #12
+    } else if (all_data$StateFips[i] %in% c("38", "46", "31", "20", "29", "19", "27", "55", "17", "18", "39", "26")){ 
       all_data$Region[i]<- "MidWest"
-    } else if (all_data$StateFips[i] %in% c("40", "48", "22", "05", "28", "01", "12", "13", "47", "45", "37", "21", "51", "54", "24", "10", "11")){ #17
+    } else if (all_data$StateFips[i] %in% c("40", "48", "22", "05", "28", "01", "12", "13", "47", "45", "37", "21", "51", "54", "24", "10", "11")){ 
       all_data$Region[i] <- "South"
-    } else if (all_data$StateFips[i] %in% c("42", "34", "36", "09", "44", "25", "50", "33", "23")){ #9
+    } else if (all_data$StateFips[i] %in% c("42", "34", "36", "09", "44", "25", "50", "33", "23")){
       all_data$Region[i] <- "NorthEast"
     } else 
       all_data$Region[i] <- NA
@@ -560,26 +545,6 @@ GetStateRegion4 <- function(all_data){
   return(all_data)
 }
 
-GetStateRegion6 <- function(all_data){
-  all_data$Region <- ""
-  for (i in 1:nrow(all_data)){
-    if (all_data$StateFips[i] %in% c("53", "16", "32", "06", "41", "02")){
-      all_data$Region[i]<- "Pacific"
-    } else if (all_data$StateFips[i] %in% c("35", "04", "49", "40", "15")){
-      all_data$Region[i]<- "SouthWest"
-    } else if (all_data$StateFips[i] %in% c("30", "38", "46", "49", "56", "08", "31", "20")){
-      all_data$Region[i] <- "West"
-    } else if (all_data$StateFips[i] %in% c("05", "22", "01", "47", "28", "12", "37", "45", "21", "13")){
-      all_data$Region[i] <- "SouthEast"
-    } else if (all_data$StateFips[i] %in% c("19", "29", "26", "27", "17", "18", "55", "39")){
-      all_data$Region[i] <- "MidWest"
-    } else if (all_data$StateFips[i] %in% c("51", "54", "24", "44", "42", "36", "23", "33", "50", "25", "09", "34", "10", "11")){
-      all_data$Region[i] <- "NorthEast"
-    } else 
-      all_data$Region[i] <- NA
-  }
-  return(all_data)
-}
 ```
 
 
@@ -590,8 +555,7 @@ Main Code: Acquire and Join all data
 
 ```{r}
 #' Main code to aquire and join all data into the aggregate dataset including data for education, income, pollution, and forestry
-#' Source: https://www.nrs.fs.fed.us/data/urban/
-#'
+
 
 #-------USER--------
 # READ BELOW BEFORE RUNNING
